# client-backend

./: .gitignore  Cargo.toml  Launcher.bat  LauncherWindows.bat  README.md  Run.bat  build.rs  include_ui.bat  include_ui.ps1  include_ui.sh  rustfmt.toml  tauri.conf.json
.github/workflows/: build-main.yml  build-merge.yml  build.yml  rust.yml
assets/: icon.rc
data/schemas/: validate_eventsGet.json  validate_gameResponse.json  validate_historyGet.json  validate_playerPost.json  validate_playerPut.json  validate_playerPutResponse.json  validate_playerResponse.json  validate_prefGet.json  validate_prefPostResponse.json
event_loop/: Cargo.toml
event_loop/src/: lib.rs
src/: args.rs  build.rs  caption.rs  command_manager.rs  console.rs  console_events.rs  demo.rs  demo_events.rs  events.rs  gamefinder.rs  io.rs  launchoptions.rs  lib.rs  main.rs  masterbase.rs  new_players.rs  parties.rs  player.rs  player_records.rs  playerlist.rs  server.rs  settings.rs  sse_events.rs  state.rs  steam_api.rs  steamapi.rs  steamhistory_api.rs  tf2bd.rs  tfbd.rs  web.rs
src/events/: command_manager.rs  console.rs  messages.rs  new_players.rs  steam_api.rs  web.rs
src/io/: command_manager.rs  filewatcher.rs  g15.rs  gamefinder.rs  logwatcher.rs  regexes.rs
tests/: test_g15.rs  vdf_caption.txt
ui/: index.html  manifest.json
