[package]
name = "client-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client_backend"
path = "src/main.rs"

[lib]
name = "client_backend"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
axum = "0.6.18"
clap = { version = "4.3.11", features = ["derive"] }
clap_lex = "0.5.0"
directories-next = "2.0.0"
notify = { version = "6.1.1", default-features = false }
open = "5.0.0"
rcon = { version = "0.5.2", features = ["rt-tokio"], git = "https://github.com/MegaAntiCheat/rust-rcon" }
regex = "1.8.4"
serde = { version = "1.0.164", features = ["rc"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
steamid-ng = "1.0.0"
tappet = { git = "https://github.com/MegaAntiCheat/SteamHelper-rs" }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
keyvalues-parser = "0.1.0"
keyvalues-serde = "0.1.0"
substring = "1.4.5"
tower-http = { version = "0.4.3", features = ["cors"] }
include_dir = "0.7.3"
steamlocate = { version = "1.2.1", features = ["steamid_ng"] }
watchman_client ={ version = "0.8.0" }
