workspace = { members = ["event_loop"] }
[package]
name = "client-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "client_backend"
path = "src/main.rs"

[lib]
name = "client_backend"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release-with-debug]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
axum = "0.7.5"
clap = { version = "4.5.8", features = ["derive"] }
clap_lex = "0.7.1"
directories-next = "2.0.0"
notify = { version = "6.1.1", default-features = false }
open = "5.2.0"
rcon = { version = "0.5.2", features = [
    "rt-tokio",
], git = "https://github.com/MegaAntiCheat/rust-rcon" }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["rc"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
steamid-ng = "1.0.0"
tappet = { git = "https://github.com/saskenuba/SteamHelper-rs", rev = "208a6ad5e2484f9cea101110dc8e29d220475821" }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full", "time"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
keyvalues-parser = "0.2.0"
keyvalues-serde = "0.2.1"
substring = "1.4.5"
tower-http = { version = "0.5.2", features = ["cors"] }
include_dir = "0.7.4"
steamlocate = "2.0.0-beta.2"
tf-demo-parser = { git = "https://github.com/MegaAntiCheat/parser", branch = "Depends-update" }
bitbuffer = { version = "0.11.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
event_loop = { version = "0.1.0", path = "event_loop" }
reqwest = { version = "0.12.5", features = ["json"] }
url = "2.5.2"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
atomic-write-file = "0.1.4"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
pot = "3.0.0"
ansi_term = "0.12.1"

[build-dependencies]
embed-resource = "2.4.2"
ico = "0.3.0"
